discussion/kv_engine/141059/141059_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Pass cookie as Traceable& to EPE:processUnknownCommand

Change-Id: Iaac6b42a837637fd266063bbda1327ae5dbf3453

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-11-26 16:28:19.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-26 18:42:14.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32131/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrDisabledTest.VerifyNotEnabled/Mcbp_XattrNo_JsonYes_SnappyNo":

<pre>
[ RUN      ] TransportProtocols/XattrDisabledTest.VerifyNotEnabled/Mcbp_XattrNo_JsonYes_SnappyNo
Failed building socket: connect() failed (127.0.0.1 58105): No connection could be made because the target machine actively refused it.
..\kv_engine\tests\testapp\testapp.cc(639): error: Failed
Failed to connect socket to 127.0.0.1:58105
..\kv_engine\tests\testapp\testapp.cc(206): error: Expected: ((SOCKET)(~0)) != (sock), actual: 18446744073709551615 vs 18446744073709551615
Failed building socket: connect() failed (127.0.0.1 58105): No connection could be made because the target machine actively refused it.
unknown file: error: C++ exception with description "Failed to connect to: localhost:58105: No connection could be made because the target machine actively refused it." thrown in SetUp().
[  FAILED  ] TransportProtocols/XattrDisabledTest.VerifyNotEnabled/Mcbp_XattrNo_JsonYes_SnappyNo, where GetParam() = (Mcbp, XattrNo, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>) (2146 ms)
TransportProtocols/XattrDisabledTest.VerifyNotEnabled/Mcbp_XattrNo_JsonYes_SnappyNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32131/ )

Failure of a CTest test  ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32131/ )

Timeout of a CTest test 394/395 Test #389: memcached_testapp.ep.TransportProtocols/XattrNoDocDurabilityTest ..............................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32131/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5920/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/server_cookie_iface.h:102:39: error: no member named "tracing" in namespace "cb" [clang-diagnostic-error]
    bool is_collections_supported(cb::tracing::Traceable& traceable) {
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5920/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/server_cookie_iface.h:102:39:
error: no member named "tracing" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5920/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4454/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27715/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7477/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6444/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15298/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7755/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
